--- a/.github/workflows/buildDeployPipeline.yml
+++ b/.github/workflows/buildDeployPipeline.yml
@@ -73,7 +73,8 @@ jobs:
           ls ./webtemp
           cd ./webtemp
           zip -r $PROJECT_NAME.zip ./*
-          mv $PROJECT_NAME.zip ../exports/web/$PROJECT_NAME.zip
+          cd ..
+          mv $PROJECT_NAME.zip ./exports/web/$PROJECT_NAME.zip
           echo "Web Exports contents"
           ls ./exports/web/
 
